--- a/Index.html
+++ b/Index.html
@@ -6,11 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <h1 style="color:blue;" >Hello, World!</h1>
-    <p>This is a sample HTML document.</p>  
-    <Button style="background-color:blue; color:white; padding:10px; border:none; border-radius:5px;">
-        Click Me
-    </Button>
-    
+    <div>
+        <Button id="btn">
+            <var>Click Me</var>
+        </Button>
+    </div>
 </body>
 </html>
+<script>
+    const button = document.getElementById("btn");
+    button.addEventListener("click",()=>{
+        button.innerHTML = "You Clicked Me";
+    });
+    button.addEventListener("dblclick",()=>{
+        button.innerHTML = "You Double Clicked Me";
+    });
+</script>
